modules/gdscript/tests/scripts/analyzer/errors/static_var_init_call_non_static_in_lambda.gd
# GH-83468

func non_static_func():
	pass

static var static_var = func ():
	var f := func ():
		var g := func ():
			non_static_func()
		g.call()
	f.call()

func test():
	pass
